--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +7,21 @@
     <title>Burgers</title>
 </head>
 <body>
-    
+    <div class="main">
+        <div class="container">
+            <div class="text">
+                <h1>
+                    <span>работаем с 11:00 до 22:00</span>
+                    Лучшие бургеры
+                </h1>
+                <p>Закажи наши фирменные бурегры или собери что-то своё, а наши курьеры доставят за 30 минут</p>
+                <a href="#">заказать</a>
+            </div>
+            <div class="visual">
+                <div class="bg"></div>
+                <img src="image/burger.png" alt="Burger">
+            </div>
+        </div>
+    </div>
 </body>
 </html>
