--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato&family=Nunito+Sans:wght@700;800&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Lato&family=Nunito+Sans:wght@700;800;900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="style/main.css">
     <title>Burgers</title>
@@ -28,6 +28,22 @@
             <div class="visual">
                 <div class="bg"></div>
                 <img src="image/burger.png" alt="Burger">
+            </div>
+        </div>
+    </div>
+
+    <div class="promo">
+        <div class="container">
+            <div class="promo-left">
+                <p class="sale">скидка</p>
+                <p class="cost">-20%</p>
+                <p class="description">При заказе на 3х и более персон мы делаем скидки, а также предоставляем скидки
+                    именинникам</p>
+            </div>
+            <div class="promo-right">
+                <p class="free">Бесплатно</p>
+                <p class="description">При заказе на сумму 500 рублей и более - доставляем бесплатно</p>
+                <a href="#">заказать</a>
             </div>
         </div>
     </div>
