fixed image paths

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato&family=Nunito+Sans:wght@700;800;900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="style/main.css">
+    <link rel="stylesheet" href="./style/main.css">
     <title>Burgers</title>
 </head>
 
@@ -27,7 +27,7 @@
             </div>
             <div class="visual">
                 <div class="bg"></div>
-                <img src="image/burger.png" alt="Burger">
+                <img src="./image/burger.png" alt="Burger">
             </div>
         </div>
     </div>
